# X-Macro

./: .gitignore  Cargo.toml  README.md  grammar
example/parallel_execution/: Cargo.toml
example/parallel_execution/src/: main.rs
src/: lib.rs  main.rs
src/action/: mod.rs
src/bind/: mod.rs
src/executor/: mod.rs
src/gui/: mod.rs
src/parser/: grammar.pest  mod.rs  syntax.pest
src/parser/entities/: mod.rs
src/parser/entities/actions/: input_action.rs  mod.rs  other_action.rs
src/parser/entities/keys/: keybd_key.rs  mod.rs  mouse_button.rs
src/trigger/: mod.rs
