[package]
name = "x-macro"
version = "0.1.0"
authors = ["Eoan <patriotrosii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch="develop" }
peg = "0.6.3"
druid = "0.7"

#[dependencies.gtk]
#version = "0.9.0"
#features = ["v3_16"]

#[dependencies.gio]
#version = ""
#features = ["v2_44"]
